--- a/index.html
+++ b/index.html
@@ -6,7 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tialind css</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        penguin: '#FFFBF0',
+                    }
+                }
+            }
+        }
+    </script>
 </head>
+
+<header class="bg-penguin pb-32 pt-12">
+    <section class="container mx-auto sm:flex items-center justify-around">
+        <div class="space-y-4 text-center sm:text-left">
+            <h1 class=" text-3xl sm:text-5xl font-bold uppercase leading-normal">
+                <span class="text-yellow-400">Be the penguins</span>
+                <br>
+                <span>of water</span>
+            </h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+            <button class="uppercase bg-[#A4BC46] py-4 px-7 rounded-xl font-semibold text-white"><svg
+                    xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24"
+                    stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                </svg>Buy Now</button>
+        </div>
+        <div class="py-8 sm:pt-0 flex justify-center">
+            <img class="w-1/2 sm:w-full" src="./images/model.png" alt="">
+        </div>
+    </section>
+</header>
 
 <body>
 
