--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                     colors: {
                         clifford: '#da373d',
                         penguin: '#FFFBF0',
+                        jacketprice: '#FABE4C',
                     }
                 }
             }
@@ -44,6 +45,116 @@
         </div>
     </section>
 </header>
+<main class="container mx-auto">
+    <!-- woman jacket -->
+    <section class="pb-24">
+        <h1 class="text-5xl font-bold">Woman Jacket</h1>
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7 rounded-xl">
+            <!-- jacket 1 -->
+            <div class="p-4 shadow-lg rounded-xl">
+                <div class="p-5 bg-slate-100 rounded-xl">
+                    <img src="./images/jacket-1.png" alt="">
+                </div>
+                <h3 class="text-3xl font-semibold">Yellow Coat Jacket </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, facere! Quasi, ratione!
+                </p>
+                <div class="flex justify-between">
+                    <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+                    <button class="uppercase bg-[#A4BC46] py-4 px-7 rounded-xl font-semibold text-white"><svg
+                            xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                        </svg>Buy Now</button>
+                </div>
+            </div>
+            <!-- jacket 2 -->
+            <div class="p-4 shadow-lg rounded-xl">
+                <div class="p-5 bg-slate-100 rounded-xl">
+                    <img src="./images/jacket-2.png" alt="">
+                </div>
+                <h3 class="text-3xl font-semibold">Yellow Coat Jacket </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, facere! Quasi, ratione!
+                </p>
+                <div class="flex justify-between">
+                    <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+                    <button class="uppercase bg-[#A4BC46] py-4 px-7 rounded-xl font-semibold text-white"><svg
+                            xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                        </svg>Buy Now</button>
+                </div>
+            </div>
+            <!-- jacket 3 -->
+            <div class="p-4 shadow-lg rounded-xl">
+                <div class="p-5 bg-slate-100 rounded-xl">
+                    <img src="./images/jacket-3.png" alt="">
+                </div>
+                <h3 class="text-3xl font-semibold">Yellow Coat Jacket </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, facere! Quasi, ratione!
+                </p>
+                <div class="flex justify-between">
+                    <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+                    <button class="uppercase bg-[#A4BC46] py-4 px-7 rounded-xl font-semibold text-white"><svg
+                            xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                        </svg>Buy Now</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="pb-24 text-center">
+        <h1 class="text-5xl font-bold">Woman Jacket</h1>
+    </section>
+
+    <section class="pb-20">
+        <!-- our benefits -->
+        <div class="grid lg:grid-cols-2 gap-7">
+            <div class="rounded-lg flex bg-slate-50 shadow-lg p-6">
+                <img class="h-20 w-20" src="./images/house.png" alt="">
+                <div>
+                    <h4 class="text-2xl">Find the Perfect Fit</h4>
+                    <p>
+                        Everybody is different, which is why we
+                        offer styles for every body.
+                    </p>
+                </div>
+            </div>
+            <div class="row-span-3 flex items-center order-first sm:order-first lg:order-none">
+                <img src="./images/shopping.png" alt="">
+            </div>
+            <div class="rounded-lg flex bg-slate-50 shadow-lg p-6">
+                <img class="h-20 w-20" src="./images/box.png" alt="">
+                <div>
+                    <h4 class="text-2xl">Find the Perfect Fit</h4>
+                    <p>
+                        Everybody is different, which is why we
+                        offer styles for every body.
+                    </p>
+                </div>
+            </div>
+            <div class="rounded-lg flex bg-slate-50 shadow-lg p-6">
+                <img class="h-20 w-20" src="./images/question.png" alt="">
+                <div>
+                    <h4 class="text-2xl">Find the Perfect Fit</h4>
+                    <p>
+                        Everybody is different, which is why we
+                        offer styles for every body.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+
+    </footer>
+</main>
 
 <body>
 
